Corrected file description of pop-metrics-decomposed

--- a/doc/graphics/talp-metrics/pop-metrics-decomposed.tex
+++ b/doc/graphics/talp-metrics/pop-metrics-decomposed.tex
@@ -1,8 +1,10 @@
 %------------------------------
 %
-%   FILE: Pop metrics
+%   FILE: Pop metrics decomposed
 %   Author: Guillem Ramírez
-%   Imoprtant: Graphism to show POP metrics
+%   Description: Graphic to show POP metrics decomposing not-useful
+%     with communications (due to communication efficiency) and waiting
+%     caused by load balance
 %
 %-----------------------------
 \documentclass[crop,tikz]{standalone}
