--- a/doc/graphics/templates/diagram.tex
+++ b/doc/graphics/templates/diagram.tex
@@ -2,24 +2,26 @@
 %
 %   FILE: Sample timeline
 %   Author: Guillem Ramírez
-%   Imoprtant: +0.08 and +0.1 on flag positioning. Size=0.03\textwidth.   
+%   Imoprtant: +0.08 and +0.1 on flag positioning. Size=3mm
 %
 %-----------------------------
 \documentclass[crop,tikz]{standalone}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{tracedraw}
 
 \begin{document}
 \begin{tikzpicture}
-  \filldraw[color=gray, fill=blue] (0,0) rectangle (10,1);
-  \filldraw[color=gray, fill=red] (10,0) rectangle (15,1);
 
-  \filldraw[color=gray, fill=white] (0,1) rectangle (15, 1.3);
-  
-  \filldraw[color=gray, fill=blue] (0, 1.3) rectangle (7, 2.3);
-  \filldraw[color=gray, fill=red] (7, 1.3) rectangle (15, 2.3);
+  \tracedrawNewTimeline
 
-  \node[inner sep=0pt] (flag) at (10.08, 1.1)
-    {\includegraphics[width=0.03\textwidth]{vector-flag.png}};
+  \tracedrawAddChunk[color=gray, fill=blue](66.6)
+  \tracedrawAddChunk[color=gray, fill=red](33.4)
+
+  \tracedrawNewLine
+
+  \tracedrawAddChunk[color=gray, fill=blue](46)
+  \tracedrawAddChunk[color=gray, fill=red](54)
+
 \end{tikzpicture}
 \end{document}
