--- a/doc/graphics/templates/tracedraw.sty
+++ b/doc/graphics/templates/tracedraw.sty
@@ -1,3 +1,11 @@
+%------------------------------
+%
+%   FILE: tracedraw.sty
+%   Author: Guillem Ramírez
+%   Imoprtant: LaTeX Package to draw timelines
+%
+%-----------------------------
+
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 \ProvidesPackage{tracedraw}[2020/01/13 Trace Timeline draw Package]
 
