--- a/doc/gep/assignment1/introduction.tex
+++ b/doc/gep/assignment1/introduction.tex
@@ -10,3 +10,14 @@ Supercomputers are machines with a huge compute power oriented to scientific and
 
 Writing efficient parallel programs is a difficult task and even more so if the developer is not specialized in computer science. In this work, we will study and improve an existing application that simulates combustion processes.
 
+This work is under an Educational Cooperation Agreement between the Facultat d'Informàtica de Barcelona and the Barcelona Supercomputing Center.
+
+The study has been developed within a Curricular internship in the Barcelona Supercomputing Center precisely in the High-Level Support Team (HLST) inside the Operations department and developed under the Performance Optimisation and Productivity (POP) Center of Excellence.
+
+
+\subsection{Concepts}
+
+\subsubsection{ }
+
+\subsection{Actors implicats}
+
