--- a/doc/gep/assignment1/titlepage.tex
+++ b/doc/gep/assignment1/titlepage.tex
@@ -3,17 +3,8 @@
   \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
   \begin{center}
-
-    \begin{figure*}
-      \begin{subfigure}{0.5\textwidth}
-        \centering
-        \includegraphics[width=1\textwidth]{BSC-blue-large.png}
-      \end{subfigure}
-      \begin{subfigure}{0.5\textwidth}
-        \centering
-        \includegraphics[width=0.6\textwidth]{logo-fib.png}
-      \end{subfigure}
-    \end{figure*}
+    
+    \includegraphics[width=0.7\textwidth]{bscfib.png}\\[0.3cm]
 
     \textsc{\Large Universitat Politècnica de Catalunya}\\[0.1cm]
     \textsc{\large Facultat d'Informàtica de Barcelona}\\[0.4cm]
