--- a/doc/gep/assignment1/justification.tex
+++ b/doc/gep/assignment1/justification.tex
@@ -1,4 +1,6 @@
 \section{Justification}
+\label{sec:justification}
+\justify
 For studying Alya as said we will use the POP methodology because:
 
 \begin{itemize}
@@ -7,6 +9,7 @@ For studying Alya as said we will use the POP methodology because:
   \item It is the methodology I have learnt during my formation period in BSC.
 \end{itemize}
 
+\justify
 We will use the BSC toolset for extracting data to apply the POP methodology because:
 
 \begin{itemize}
@@ -15,4 +18,3 @@ We will use the BSC toolset for extracting data to apply the POP methodology bec
   \item It is the toolset I have learnt during my formation period in BSC.
 \end{itemize}
 
-\clearpage
