--- a/doc/gep/assignment1/method.tex
+++ b/doc/gep/assignment1/method.tex
@@ -1,4 +1,15 @@
 \section{Methodology and rigour}
 
+\justify
+The methodology relays in constant feedback between Marta Garcia (the project director) and me. As tasks are sequential, once a task is done the results are shared with the director and conclusions and definition of the next task is discussed. The feedback and the discussion are done via email, personal meetings or group meetings.
+
+\justify
+This work has been developed during the global pandemic of COVID-19 so telematic meetings are contemplated.
+
+\justify
+Another important aspect to cover is "Version Control" of the project. A git repository has been created for keeping track of the POP deliverables and changes to the code.
+
+\justify
+For storing the data we will use a "google  spreadsheet" data sheet with the corresponding information about the runs and the tests performed. However, trace files and run logs are kept inside the MareNostrum 4 shared storage.
 
 \clearpage
