--- a/doc/gep/assignment1/scope.tex
+++ b/doc/gep/assignment1/scope.tex
@@ -1,27 +1,31 @@
 \section{Scope}
-
+\justify
+In this section you will find a definition of the objectives of the projects and the identification of possible risks.
 \subsection{Objectives}
 
+\justify
 The project is divided into two main objectives.
 \begin{itemize}
   \item Perform a rigorous Performance Analysis following the POP methodology and identify bottlenecks.
-  \item Knowing the bottlenecks propose, implement and test optimizations to the code.
+  \item Knowing the bottlenecks, propose, implement and test optimizations to the code.
 \end{itemize}
 
+\justify
 Other sub-objectives are:
 \begin{itemize}
+  \item Learn and gain experience on the performance analysis and optimization field.
   \item Write an easy to understand documentation about all the stages of the project making emphasis on the POP methodology.
 \end{itemize}
 
 \subsection{Potential obstacles and risks}
 
+\justify
 The following potential obstacles and risks have been identified:
 \begin{itemize}
-  \item Misinterpretation of a metric during the analysis: This risk can lead to study to incorrect conclusions. However, by daily feedback with the director of the work and bi-monthly group meetings, we minimize this risk.
+  \item \textbf{Misinterpretation of a metric during the analysis:} This risk can lead the study to incorrect conclusions. However, by daily feedback with the director of the work and bi-monthly group meetings, we minimize this risk.
 
-  \item Incorrect runs: This is a common risk that occurs when performing different tests of an application forgetting to change a parameter and leading to an incorrect run. These are usually easy to detect as numbers obtained does not match the expected. Still, if the risk is not detected the feedback received during the development should avoid this risk.
+  \item \textbf{Incorrect runs:} This is a common risk that occurs when performing different tests of an application forgetting to change a parameter and leading to an incorrect run. These are usually easy to detect as numbers obtained does not match the expected. Still, if the risk is not detected the feedback received during the development should avoid this risk.
 
-  \item Machine noise: Large supercomputer machines use complex environments that can lead to system noise. System noise refers to abnormal events that interrupt the application making counters and timings to have erratic values. Take an appropriate number of samples and doing a correct statistical analysis will avoid this risk.
+  \item \textbf{Machine noise:} Large supercomputer machines use complex environments that can lead to system noise. System noise refers to abnormal events that interrupt the application making counters and timings to have erratic values. Take an appropriate number of samples and doing a correct statistical analysis will avoid this risk.
 \end{itemize}
 
-\clearpage
