--- a/doc/gep/assignment1/test.bib
+++ b/doc/gep/assignment1/test.bib
@@ -15,14 +15,7 @@
 
 }
 
-@misc{ompssSpec,
-  title={OmpSs Specification},
-  howpublished={\url{https://pm.bsc.es/ftp/ompss/doc/spec/OmpSsSpecification.pdf}},
-  year={2019},
-  organization={Barcelona Supercomputing Center}
-}
-
- @article{programminModels, 
+@article{programminModels, 
   title={Models for Parallel Computing: Review and Perspectives}, 
   volume={24}, 
   ISSN={0177-0454}, 
@@ -35,21 +28,45 @@
 }
 
 @misc{mn4,
-  title={Marenostrum 4 techincal information},
+  title={MareNostrum 4 techincal information},
   organization={Barcelona Supercomputing Center},
   url={https://www.bsc.es/marenostrum/marenostrum/technical-information},
   note={accessed on 26/09/2020},
   urldate={26-09-2018}
 }
 
-@misc{alya,
+@misc{tools,
+  title={BSC tools website},
+  organization={Barcelona Supercomputing Center},
+  url={https://tools.bsc.es},
+  note={accessed on 26/09/2020},
+  urldate={26-09-2018}
+}
+
+@misc{extraeTools,
+  title={BSC tools extrae website},
+  organization={Barcelona Supercomputing Center},
+  url={https://tools.bsc.es/extrae},
+  note={accessed on 26/09/2020},
+  urldate={26-09-2018}
+}
+
+@misc{paraverWeb,
+  title={BSC tools paraver website},
+  organization={Barcelona Supercomputing Center},
+  url={https://tools.bsc.es/paraver},
+  note={accessed on 26/09/2020},
+  urldate={26-09-2018}
+}
+
+
+@article{alya,
     title={Alya: Towards Exascale for Engineering Simulation Codes},
     author={Mariano Vazquez and Guillaume Houzeaux and Seid Koric and Antoni Artigues and Jazmin Aguado-Sierra and Ruth Aris and Daniel Mira and Hadrien Calmet and Fernando Cucchietti and Herbert Owen and Ahmed Taha and Jose Maria Cela},
     year={2014},
     eprint={1404.4881},
     archivePrefix={arXiv},
     primaryClass={physics.comp-ph},
-    url={https://arxiv.org/pdf/1404.4881.pdf}
 }
 
 @article{mpi,
@@ -61,3 +78,24 @@
   year={1996},
   publisher={ASFRA BV}
 }
+
+@inproceedings{paraverPaper,
+  title={Paraver: A tool to visualize and analyze parallel code},
+  author={Pillet, Vincent and Labarta, Jes{\'u}s and Cortes, Toni and Girona, Sergi},
+  booktitle={Proceedings of WoTUG-18: transputer and occam developments},
+  volume={44},
+  number={1},
+  pages={17--31},
+  year={1995},
+  organization={Citeseer}
+}
+
+@incollection{papi,
+  title={Collecting performance data with PAPI-C},
+  author={Terpstra, Dan and Jagode, Heike and You, Haihang and Dongarra, Jack},
+  booktitle={Tools for High Performance Computing 2009},
+  pages={157--173},
+  year={2010},
+  publisher={Springer}
+}
+
