--- a/doc/gep/assignment1/titlepage.tex
+++ b/doc/gep/assignment1/titlepage.tex
@@ -4,7 +4,7 @@
 
   \begin{center}
     
-    \includegraphics[width=0.7\textwidth]{bscfib.png}\\[0.3cm]
+    \includegraphics[width=0.8\textwidth]{header_logos.png}\\[0.7cm]
 
     \textsc{\Large Universitat Politècnica de Catalunya}\\[0.1cm]
     \textsc{\large Facultat d'Informàtica de Barcelona}\\[0.4cm]
