updated talp and gep1 assignment done

--- a/doc/gep/assignment1/justification.tex
+++ b/doc/gep/assignment1/justification.tex
@@ -5,6 +5,7 @@ For studying Alya as said we will use the POP methodology because:
 
 \begin{itemize}
   \item The study is a POP service.
+  \item It is a methodology promoted by an European Center of Excellence, meaning it is in the state-of-the-art of performance analysis methods and it is widely use in the academia.
   \item It is a well-known method and has been in part developed inside BSC.
   \item It is the methodology I have learnt during my formation period in BSC.
 \end{itemize}
@@ -14,7 +15,7 @@ We will use the BSC toolset for extracting data to apply the POP methodology bec
 
 \begin{itemize}
   \item They are well-integrated with the POP methodology.
-  \item The tools are well-known in BSC.
-  \item It is the toolset I have learnt during my formation period in BSC.
+  \item The tools are well-known and developed in BSC. In the situation that we find a bug or we have a problem using the tools, we can directly contact the application developers as they are co-workers.
+  \item It is the toolset I have learnt during my formation period in BSC and during the computer engineering degree at PAR\footnote{Parallelism: \url{https://www.fib.upc.edu/en/studies/bachelors-degrees/bachelor-degree-informatics-engineering/curriculum/syllabus/PAR}} subject.
 \end{itemize}
 
