--- a/doc/gep/assignment1/method.tex
+++ b/doc/gep/assignment1/method.tex
@@ -7,9 +7,12 @@ The methodology relays in constant feedback between Marta Garcia (the project di
 This work has been developed during the global pandemic of COVID-19 so telematic meetings are contemplated.
 
 \justify
-Another important aspect to cover is "Version Control" of the project. A git repository has been created for keeping track of the POP deliverables and changes to the code.
+Another important aspect to cover is "Version Control" of the project. A git repository has been created for keeping track of the POP deliverables. Another git repository is created for tracking the changes to the code.
 
 \justify
 For storing the data we will use a "google  spreadsheet" data sheet with the corresponding information about the runs and the tests performed. However, trace files and run logs are kept inside the MareNostrum 4 shared storage.
+
+\justify
+An issue page in the internal gitlab of the Best Practices for Performance and Programmability group has been created. In this page I will be posting updates about the work so the members of the team can be updated about the state of the project.
 
 \clearpage
