--- a/doc/gep/assignment1/test.bib
+++ b/doc/gep/assignment1/test.bib
@@ -43,6 +43,14 @@
   urldate={26-09-2018}
 }
 
+@misc{tracedraw,
+  author={Guillem Ramirez-Miranda},
+  title={Tracedraw repository},
+  url={https://github.com/teleportex/tracedraw.sty},
+  note={accessed on 26/09/2020},
+  urldate={26-09-2018}
+}
+
 @misc{extraeTools,
   title={BSC tools extrae website},
   organization={Barcelona Supercomputing Center},
@@ -97,5 +105,14 @@
   pages={157--173},
   year={2010},
   publisher={Springer}
+}
+
+@inproceedings{paperparaver,
+  title={Performance study of HPC applications on an Arm-based cluster using a generic efficiency model},
+  author={Banchelli, Fabio and Peiro, Kilian and Querol, Andrea and Ramirez-Gargallo, Guillem and Ramirez-Miranda, Guillem and Vinyals, Joan and Vizcaino, Pablo and Garcia-Gasulla, Marta and Mantovani, Filippo},
+  booktitle={2020 28th Euromicro International Conference on Parallel, Distributed and Network-Based Processing (PDP)},
+  pages={167--174},
+  year={2020},
+  organization={IEEE}
 }
 
