--- a/doc/gep/assignment1/titlepage.tex
+++ b/doc/gep/assignment1/titlepage.tex
@@ -28,7 +28,9 @@
     {\large Co-director}\\[0.1cm]
     \textsc{\large David Vicente Dorca}\\[0.4cm]
     {\large Tutor}\\[0.1cm]
-    \textsc{\large Julian David Morillo Pozo}\\[0.1cm]
+    \textsc{\large Julian David Morillo Pozo}\\[0.4cm]
+    {\large GEP Tutor}\\[0.1cm]
+    \textsc{\large Joan Sardà Ferrer}\\[0.1cm]
     \vfill
     {\large \today\par}
 
