--- a/doc/gep/assignment1/context.tex
+++ b/doc/gep/assignment1/context.tex
@@ -67,7 +67,7 @@ The general purpose block consists of 3456 nodes each node containing 2 Intel Xe
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{mn4}
-  \caption[MareNostrum4 machine]{MareNostrum 4 machine. {By Gemmaribasmaspoch - Own work, CC BY-SA 4.0, \url{https://commons.wikimedia.org/w/index.php?curid=61308843}}}
+  \caption[MareNostrum4 machine]{MareNostrum 4 machine. {By Gemmaribasmaspoch, CC BY-SA 4.0, \url{https://commons.wikimedia.org/w/index.php?curid=61308843}}}
   \label{fig:mn4}
 \end{figure}
 
@@ -105,14 +105,14 @@ The main BSC tools we are going to use are:
     \begin{figure}[htbp]
       \centering
       \includegraphics[width=0.8\textwidth]{sample_histogram}
-      \caption{Sample Paraver Histogram}
+      \caption[Sample Paraver Histogram]{Sample Paraver Histogram. Own compilation.}
       \label{fig:hist}
     \end{figure}
 
     \begin{figure}[htbp]
       \centering
       \includegraphics[width=0.8\textwidth]{sample_trace}
-      \caption{Sample Paraver trace}
+      \caption[Sample Paraver trace]{Sample Paraver trace. Own compilation}
       \label{fig:trace}
     \end{figure}
 
@@ -143,7 +143,7 @@ The main BSC tools we are going to use are:
         \tracedrawAddChunk[color=gray, fill=red](70)
 
       \end{tracedraw}
-      \caption{Sample trace representation with tracedraw}
+      \caption[Sample trace representation with tracedraw]{Sample trace representation with tracedraw. Own compilation}
       \label{fig:tracedraw}
     \end{figure}
 
