--- a/doc/gep/assignment2/tasks.tex
+++ b/doc/gep/assignment2/tasks.tex
@@ -122,7 +122,7 @@ T5.1 & Memory redaction                                 & 70       & T4.3       
 T5.2 & Presentation prepration                          & 15       & T5.1         \\ \hline
 \multicolumn{3}{l}{Total}                                          & 525         
 \end{tabular}
-\caption{Summary of tasks}
+\caption[Summary of tasks]{Summary of tasks. Own compilation.}
 \label{tab:tasks}
 \end{table}
 
